namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-crypto
  labels:
    name: monitoring-crypto
