ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: kibana.protel.josemokeni.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: elastic.protel.josemokeni.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: logstash.protel.josemokeni.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logstash
            port:
              number: 8080
